# Dreka

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  node.js.yml  package-lock.json  package.json
app/: CMakeLists.txt  link_config.json  theme.json
app/html/: index.html
app/include/clipboard/: clipboard_controller.h
app/include/map/: map_grid_controller.h  map_menu_controller.h  map_ruler_controller.h  map_viewport_controller.h
app/include/routes/: routes_controller.h  waypoint_controller.h  waypoint_edit_controller.h
app/include/vehicles/: mission_controller.h  vehicles_controller.h
app/qml/: MainWindow.qml  Map.qml  app_qml.qrc  qml.qrc
app/qml/CommLinks/: CommLinks.qml
app/qml/CommLinks/Edit/: CommLinkEditView.qml
app/qml/CommLinks/List/: CommLink.qml  (+1 more)
app/qml/Common/: Dragger.qml  ListElement.qml  ParametersEdit.qml  PointedItem.qml  PointedMenu.qml  PointedPopup.qml  Pointer.qml  PositionEdit.qml
app/qml/Map/: CesiumMap.qml  Compas.qml  Coordinates.qml  Map.qml  MapButton.qml  MapCompas.qml  MapControl.qml  MapControlView.qml  MapCoordinates.qml  MapCross.qml  MapGrid.qml  MapGridView.qml  MapLayer.qml  MapLayers.qml  MapLayersView.qml  MapMenu.qml  MapRuler.qml  MapRulerView.qml  MapScale.qml  ScaleRuler.qml
app/qml/Missions/: MissionEditView.qml  MissionItemEditView.qml  MissionItemList.qml  MissionList.qml  MissionListItem.qml  MissionMenuView.qml  MissionOperationView.qml  MissionPatternView.qml  MissionRouteView.qml  MissionsList.qml  MissionsListItem.qml  MissionsView.qml
app/qml/Routes/: PayloadListItem.qml  Route.qml  RouteEdit.qml  RouteItemEdit.qml  RouteItemEditView.qml  RouteItemList.qml  RouteItemListItem.qml  RouteItemView.qml  RouteList.qml  RouteListItem.qml  RouteMenuView.qml  RoutePatternView.qml  RoutesView.qml  Waypoint.qml  WaypointEdit.qml  WaypointEditView.qml  WaypointListItem.qml  WaypointMenuView.qml  WaypointView.qml
app/qml/Vehicles/: ChecklistItem.qml  Coordinates.qml  GenericDashboard.qml  MissionPopup.qml  MissionView.qml  Navigation.qml  Preflight.qml  Vehicle.qml  VehicleMissionView.qml  VehicleView.qml  Vehicles.qml  VehiclesListView.qml  VehiclesView.qml
app/qml/Waypoints/: PayloadListItem.qml  WaypointEdit.qml  WaypointView.qml
app/resources/: dreka_rsc.qrc
app/src/: clipboard_controller.cpp  clipboard_controller.h  main.cpp  map_coordinate.cpp  map_coordinate.h  map_grid_controller.cpp  map_grid_controller.h  map_layers_controller.cpp  map_layers_controller.h  map_layers_model.cpp  map_layers_model.h  map_ruler_controller.cpp  map_ruler_controller.h  map_viewport_controller.cpp  map_viewport_controller.h  module_loader.cpp  module_loader.h
app/src/comm_links/: comm_link_edit_controller.cpp  comm_link_edit_controller.h  comm_link_list_controller.cpp  comm_link_list_controller.h
app/src/communication/: communication_controller.cpp  communication_controller.h
app/src/map/: map_grid_controller.cpp  map_layers_controller.h  map_menu_controller.cpp  map_menu_controller.h  map_ruler_controller.cpp  map_viewport_controller.cpp  map_viewport_controller.h
app/src/missions/: mission_edit_controller.cpp  mission_edit_controller.h  mission_item_edit_controller.cpp  mission_item_edit_controller.h  mission_list_controller.cpp  mission_list_controller.h  mission_menu_controller.cpp  mission_menu_controller.h  mission_operation_controller.cpp  mission_operation_controller.h  mission_pattern_controller.cpp  mission_pattern_controller.h  mission_route_controller.cpp  mission_route_controller.h  mission_route_item_controller.cpp  mission_route_item_controller.h  missions_controller.cpp  missions_controller.h  missions_map_controller.cpp  missions_map_controller.h  missions_menu_controller.cpp  missions_menu_controller.h
app/src/routes/: route_item_controller.cpp  route_item_controller.h  route_item_edit_controller.cpp  route_item_edit_controller.h  route_menu_controller.cpp  route_menu_controller.h  route_pattern_controller.cpp  route_pattern_controller.h  routes_controller.cpp  routes_controller.h  waypoint_controller.cpp  waypoint_edit_controller.cpp
app/src/vehicles/: mission_controller.cpp  vehicle_dashboard_controller.cpp  vehicle_dashboard_controller.h  vehicle_list_contoller.cpp  vehicle_list_contoller.h  vehicle_mission_controller.cpp  vehicle_mission_controller.h  vehicles_controller.cpp  vehicles_controller.h  vehicles_map_controller.cpp  vehicles_map_controller.h
app/web/: Adsb.js  Area.js  CesiumWrapper.js  Common.js  Draggable.js  Grid.js  GridAdapter.js  IWeremap.js  Input.js  Layers.js  LayersAdapter.js  Path.js  Routes.js  Ruler.js  RulerAdapter.js  Sign.js  Signs.js  TerrainPoint.js  Vehicles.js  Viewport.js  ViewportAdapter.js  Waypoints.js  WereCesium.js  cesiumstyle.css  index.html  web.qrc
app/web/Core/: Common.js  Draggable.js  Input.js  Interactable.js  Interaction.js
app/web/Scene/: Adsb.js  Area.js  Grid.js  Layers.js  Path.js  Routes.js  Ruler.js  Signs.js  TerrainPoint.js  Vehicles.js  Viewport.js
app/web/models/: fixed_wing.glb  flying_wing.glb
core/: CMakeLists.txt
core/include/: i_module.h
modules/adsb/: CMakeLists.txt
modules/adsb/qml/: AdsbState.qml  AdsbView.qml  adsb_qml.qrc
modules/adsb/resources/: adsb_rsc.qrc
modules/adsb/src/: adsb_controller.cpp  adsb_controller.h  i_adsb_source.h  meta.json  module_adsb.cpp  module_adsb.h  opensky_adsb_source.cpp  opensky_adsb_source.h
modules/cesium_map/: CMakeLists.txt  layers.json
modules/cesium_map/qml/: CesiumMap.qml  Map.qml  MapCompas.qml  MapCoordinates.qml  MapGridView.qml  MapLayer.qml  MapLayersView.qml  MapRulerView.qml  MapScale.qml  cesium_map_qml.qrc
modules/cesium_map/resources/: cesium_map_rsc.qrc
modules/cesium_map/src/: cesium_map.cpp  cesium_map.h  clipboard_controller.cpp  clipboard_controller.h  map_coordinate.cpp  map_layers_controller.cpp  meta.json  module_cesium_map.cpp  module_cesium_map.h
modules/cesium_map/web/: CesiumWrapper.js  Input.js  Layers.js  Ruler.js  RulerAdapter.js  Viewport.js  ViewportAdapter.js  cesium.qrc  cesium_wrapper.qrc  index.html
(+28 files in other folders)
